blockchain channges,  cnd hospital admin css changes

--- a/src/assets/css/sttttt.css
+++ b/src/assets/css/sttttt.css
@@ -1341,7 +1341,7 @@ a.conPainTime img {
 }
 .typeSel .css-yk16xz-control{
     border-radius: 8px !important;
-    background-color: #E1F7F7 !important;
+    background-color: #ffffff !important;
     color: #00ABAF !important;
     border-color: transparent !important;
     font-family: Muli !important;
