--- a/src/Screens/Components/CometChat/react-chat-ui-kit/CometChat/components/CometChatConversationListScreen/style.scss
+++ b/src/Screens/Components/CometChat/react-chat-ui-kit/CometChat/components/CometChatConversationListScreen/style.scss
@@ -46,6 +46,7 @@
 	.ccl-left-panel.active {
 		left: 0!important;
     box-shadow: rgba(0,0,0,.4)-30px 0 30px 30px;
+    z-index: 99999999 !important;
   }
   
   .ccl-center-panel {
