View images of journal move to component for speedup the site , Show more 10 entries at patient

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -13103,6 +13103,13 @@ a.academy_ul ul li img {
 
 
 /*Added By ankita*/
+.more10entries{
+    text-align: center;
+    cursor: pointer;
+    color: #4fb8b8;
+    font-weight: 700;
+}
+
 .flag-select .filterBox input {
     width: 90% !important;
 }
