--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -13107,6 +13107,9 @@ a.academy_ul ul li img {
 
 
 /*Added By ankita*/
+a {
+    color: initial !important;
+}
 .conPain_num, .bp_hg, .icd_num{
     min-height: 30px;
 }
