resolve color issue

--- a/src/Screens/Components/CometChat/react-chat-ui-kit/CometChat/resources/core.scss
+++ b/src/Screens/Components/CometChat/react-chat-ui-kit/CometChat/resources/core.scss
@@ -21,12 +21,12 @@ body{
   box-sizing:border-box
 }
 
-a { 
-  background:0 0;
-  text-decoration:none;
-  background-color:transparent;
-  color:inherit;
-}
+// a { 
+//   background:0 0;
+//   text-decoration:none;
+//   background-color:transparent;
+//   color:inherit;
+// }
 
 img {
   border:0;
