Blockchain in multiple languages, search on country codes, Graph undefined issue, new hba1c in personalised dashboard, demo video, pharmacy blank page issue.

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -13107,6 +13107,9 @@ a.academy_ul ul li img {
 
 
 /*Added By ankita*/
+.SetWidthPopup3 {
+    width: 55%;
+}
 .conPain_num, .bp_hg, .icd_num{
     min-height: 30px;
 }
