doctor visit with hint, doctor end - journal profile section, default German flag on profile  update, date of vaccination, organ donor issue, prescription archive

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -13107,6 +13107,9 @@ a.academy_ul ul li img {
 
 
 /*Added By ankita*/
+.profileBtn {
+    margin: 10px;
+}
 .SetWidthPopup3 {
     width: 55%;
 }
