--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -6477,12 +6477,12 @@ a.archvDel:hover ul {
     margin-bottom: 2px;
 }
 .checkHelth {
-    padding: 12px 24px 18px 24px;
+    padding: 12px 10px 18px 20px;
 }
 .checkHelth a {
     color: #404646;
     font-family: Muli;
-    font-size: 14px;
+    font-size: 12px;
     font-weight: 600;
     letter-spacing: 0;
     line-height: 18px;
@@ -13230,12 +13230,15 @@ iframe.stripe_checkout_app {
 }
 .SetWidthPopup1{
     width: 400px !important;
-    height : 85% !important;
+    text-align: center;
+    max-height: 85%;
+    overflow: hidden;
 }
 .iiz__img {
     max-width: 100%;
     height: auto;
-    max-height: 500px !important;
+    max-height: 415px !important;
+    margin-bottom: 6px;
 }
 .ImageSec{
     height: 200px;
@@ -15548,17 +15551,19 @@ td.dotsImgColor.pivoted{
 .addBirthSlot .react-date-picker__inputGroup__month{
     min-width: 33px !important;
     font-size: 10px !important;
+    text-align: center;
 }
 .addBirthSlot .react-date-picker__inputGroup__day{
-    min-width: 17px !important;
+    min-width: 33px !important;
     font-size: 10px !important;
+    text-align: center;
 }
 .addBirthSlot .react-date-picker__inputGroup__year{
     min-width: 45px !important;
     font-size: 10px !important;
 }
 .addBirthSlot .react-date-picker__wrapper{
-    padding: 6px 0px !important;
+    padding: 6px 4px !important;
 }
 .addBirthSlot .react-date-picker{
     display: block !important;
