--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -13113,6 +13113,19 @@ a.academy_ul ul li img {
 
 
 /*Added By ankita*/
+.homeBgDrk .payment_sec_extra_ser p{
+    color: #BFC1C1 !important;
+}
+.homeBgDrk .payment_sec_extra_ser{
+    background: #404646 !important;
+}
+.payment_sec_extra_ser{
+    background: #fff;
+    padding: 30px;
+    border-radius: 15px;
+    box-shadow: 0 8px 16px 0 rgba(0,8,8,0.08);
+
+}
 .__PrivateStripeElement iframe {
     min-width: 500px !important;
 }
