--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -13146,9 +13146,9 @@ a.academy_ul ul li img {
     color: #fff;
     border: none;
     border-radius: 8px;
-    padding: 5px 10px;
+    padding: 5px 8%;
     font-weight:600;
-    margin: 10px;
+    margin-top: 10px;
 }
 @media (max-width: 768px){
     .menuItems {
