--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1864,7 +1864,7 @@ a.profilMenu {
         width: 100% !important;
     }
     .docOpinion {
-        margin-left: 0px !important;
+        margin: 30px !important;
     }
     .checkHelth {
         overflow-y: scroll;
@@ -4107,7 +4107,7 @@ button.aboutTabsIner {
     line-height: 16px;
     text-align: center;
     width: 100%;
-    padding: 13px 12px;
+    padding: 13px 2px;
     outline: none;
     margin-top: 0px;
 }
@@ -13672,7 +13672,7 @@ g.highcharts-axis.highcharts-yaxis text {
     color: #BFC1C1 !important;
 }
 .imptNotic {
-    height: 530px;
+    height: 500px;
     padding: 24px 24px 24px 24px;
     overflow: auto;
 }
@@ -15752,6 +15752,7 @@ td.dotsImgColor.pivoted{
     display: flex;
     align-items: center;
     padding: 17px 14px;
+    word-break: break-all;
 }
 .presOpinionIner .responsiveTable td:nth-child(2) p{
     margin-bottom: 0px;
@@ -16137,5 +16138,19 @@ select:-webkit-autofill:focus {
 @media screen and (max-height: 625px) {
     .phrmLinkUpr {
         height: 480px !important;
+    }
+}
+
+@media (max-height:300px) {
+    .imptNotic {
+        height: 480px !important;
+    }
+}
+
+@media screen and (max-width: 40em){
+    .responsiveTable tbody tr {
+        border: 1px solid #000;
+        padding: 0.25em;
+        margin-bottom: 14px;
     }
 }
