correct all the languages and add the new functionality of delete user account by user

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -13114,6 +13114,18 @@ a.academy_ul ul li img {
 
 
 /*Added By ankita*/
+.current_pass_sec{
+    margin-top:20px;
+}
+.deletewarninghead{
+    color: red;
+    font-weight: bold;
+}
+.deletewarning{
+    color: red;
+    font-weight: 500;
+    padding:15px 0px;
+}
 .prevNxtpag a {
     margin: 0px 0px 0px 15px !important;
 }
